--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,11 @@
     <link rel='stylesheet' href='/css/style.css'/>
 </head>
 <body>
+<div id="music">
+    <img id="mb" src="/img/imgs_01/music_c0fda01.gif" alt="">
+    <img id="m1" src="/img/imgs_01/music_off_8d94020.png" alt="" class="z_xuanzhuan">
+    <audio src="/Rupert Gregson-Williams - Wonder Woman's Wrath.mp3" autoplay="autoplay" loop="loop"></audio>
+</div>
 <div class="swiper-container">
     <div class="swiper-wrapper">
         <div class="swiper-slide">
@@ -58,8 +63,10 @@
                swiper-animate-delay="1s">亲爱的创业企业：</p>
             <p id="p2_2" class="ani" swiper-animate-effect="zoomIn" swiper-animate-duration="0.5s"
                swiper-animate-delay="1s"> &nbsp; &nbsp;北京银行中关村小巨人创客中心已于2015年6月18日正式成立，成为北京银行积极探索银行支持小微企业创新创业的新模式和新途径。作为首家银行机构创办的创客中心，该中心实行免费机制，以投贷联动为重点，旨在搭建一个创业孵化、跨界合作、分享共赢的平台，满足企业成长过程中的多方面需求，协助企业提升自身价值，与广大创业企业实现共同成长。</p>
-            <p id="p3_2">创业孵化</p>
-            <p id="p4_2">跨界合作</p>
+            <p id="p3_2" class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s"
+               swiper-animate-delay="1.3s">创业孵化</p>
+            <p id="p4_2" class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s"
+               swiper-animate-delay="1.6s">跨界合作</p>
 
 
             <img id="i6" class="ani" swiper-animate-effect="z_shangHua_repeat" swiper-animate-duration="4s"
@@ -67,7 +74,111 @@
         </div>
         <!----------------------------第三页------------------------------------------->
         <div class="swiper-slide">
+            <img id="bg_up_3" class="ani" swiper-animate-effect="slideInDown" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0s" src="/img/imgs_01/a6ce158a-2dea-4d03-9288-6cf43b826b8a-0530.png"/>
+            <img id="i2_3" class="ani" swiper-animate-effect="zoomInDown" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0.3s" src="/img/imgs_01/aa1c9d3d-70e3-4032-90a1-cd11e86194cb-7563.png"/>
+            <img id="i3_3" class="ani" swiper-animate-effect="slideInLeft" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0.5s" src="/img/imgs_01/4c898ab9-1412-4f15-a7f7-994ce6159988-7989.png"/>
+            <img id="i4_3" class="ani" swiper-animate-effect="slideInRight" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0.5s" src="/img/imgs_01/4c898ab9-1412-4f15-a7f7-994ce6159988-7989.png"/>
+            <h3 class="ani" swiper-animate-effect="fadeInLeftBig" swiper-animate-duration="0.5s"
+                swiper-animate-delay="0.5s">COURSE PROCESS</h3>
+            <p id="p3_3" class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s"
+               swiper-animate-delay="1.3s">14:00入场</p>
+            <p id="p4_3" class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s"
+               swiper-animate-delay="1.6s">徐泽伟先生经验分享</p>
+            <p id="p5_3" class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s"
+               swiper-animate-delay="1.9s">企业对接环节</p>
+            <p id="p6_3" class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="0.5s"
+               swiper-animate-delay="2.2s">16:00结束</p>
 
+            <img id="i6_3" class="ani" swiper-animate-effect="z_shangHua_repeat" swiper-animate-duration="4s"
+                 swiper-animate-delay="1.2s" src="/img/imgs_01/fae81aa4-fc2e-466d-aea4-5fbff9299792-5736.png"/>
+        </div>
+        <!----------------------------第四页------------------------------------------->
+        <div class="swiper-slide">
+            <img id="bg_up_4" class="ani" swiper-animate-effect="slideInDown" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0s" src="/img/imgs_01/a816d09c-c36a-47c9-8246-0dcd006a9412-1006.png"/>
+            <img id="i2_4" class="ani" swiper-animate-effect="zoomInDown" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0.3s" src="/img/imgs_01/aa1c9d3d-70e3-4032-90a1-cd11e86194cb-7563.png"/>
+            <img id="i3_4" class="ani" swiper-animate-effect="slideInLeft" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0.5s" src="/img/imgs_01/4c898ab9-1412-4f15-a7f7-994ce6159988-7989.png"/>
+            <img id="i4_4" class="ani" swiper-animate-effect="slideInRight" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0.5s" src="/img/imgs_01/4c898ab9-1412-4f15-a7f7-994ce6159988-7989.png"/>
+            <h3 class="ani" swiper-animate-effect="fadeInLeftBig" swiper-animate-duration="0.5s"
+                swiper-animate-delay="0.8s">MAIN GUEST</h3>
+            <div id="box1_4" class="ani" swiper-animate-effect="zoomIn" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="1s">
+                <img id="i5_4" class="ani" swiper-animate-effect="z_zuoyouhua" swiper-animate-duration="4s"
+                     swiper-animate-delay="1.9s" src="/img/imgs_01/85d8e8f1-807f-409c-affd-d04759c67554-3727.png"/>
+            </div>
+
+            <p id="p1_4" class="ani" swiper-animate-effect="bounceInDown" swiper-animate-duration="0.5s"
+               swiper-animate-delay="1.3s">创客中心首期导师、91金融创始人许泽玮先生将以“创业企业股权与债权融资经验分享”为主题讲述自身创业故事，分享创 业经验，并与企业进行互动及交流。</p>
+
+            <img id="i6_4" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0.4s" src="/img/imgs_01/71501247-35fa-46ca-8339-010c2a57baca-7331.png"/>
+        </div>
+        <!----------------------------第五页------------------------------------------->
+        <div class="swiper-slide">
+            <img id="bg_up_5" class="ani" swiper-animate-effect="slideInDown" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0s" src="/img/imgs_01/a816d09c-c36a-47c9-8246-0dcd006a9412-1006.png"/>
+            <img id="i2_5" class="ani" swiper-animate-effect="zoomInDown" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0.3s" src="/img/imgs_01/aa1c9d3d-70e3-4032-90a1-cd11e86194cb-7563.png"/>
+            <img id="i3_5" class="ani" swiper-animate-effect="slideInLeft" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0.5s" src="/img/imgs_01/4c898ab9-1412-4f15-a7f7-994ce6159988-7989.png"/>
+            <img id="i4_5" class="ani" swiper-animate-effect="slideInRight" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0.5s" src="/img/imgs_01/4c898ab9-1412-4f15-a7f7-994ce6159988-7989.png"/>
+            <h3 class="ani" swiper-animate-effect="fadeInLeftBig" swiper-animate-duration="0.5s"
+                swiper-animate-delay="0.8s">导师介绍</h3>
+            <img id="i5_5" class="ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="1.2s"  src="/img/imgs_01/9f3f8e57-e3ee-4a47-9833-4c7e993bf033-8917.png" alt="">
+            <img id="img_5" class="ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="1.4s"  src="/img/imgs_01/5696fbab-f290-485d-b503-82be5b65a836-3956.png" alt="">
+            <p id="p1_5" class="ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s"
+               swiper-animate-delay="1.6s" >许泽玮先生毕业于北京航空航天大学，曾就职于新浪网、搜狐网等知名公司，并在其中担任过多个重要管理岗位。2011年许泽玮先生选择投身互联网金融行业，创立91金融，搭建了全国领先的在线金融产品导购和销售平台，经过近几年发展，已成长为国内互联网金融领军企业。许泽玮先生是一位集丰富创业经历、多年互联网</p>
+            <img id="i6_5" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0.4s" src="/img/imgs_01/71501247-35fa-46ca-8339-010c2a57baca-7331.png"/>
+        </div>
+        <!----------------------------第六页------------------------------------------->
+        <div class="swiper-slide">
+            <img id="bg_up_6" class="ani" swiper-animate-effect="z_zuoyouhua" swiper-animate-duration="5s"
+                 swiper-animate-delay="0s" src="/img/imgs_01/13826ac4-362b-4e70-915a-2f5be75fdbb0-3734.png"/>
+            <p id="p1_6" class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s"
+               swiper-animate-delay="0.3s">第五期<br/>"导师大讲堂</p>
+            <img id="i1_6" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.6s"
+                 swiper-animate-delay="0.5s" src="/img/imgs_01/eda78c1a-a5ba-4ae9-a77c-00f2881f63a4-3228.png"/>
+            <p id="p2_6" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.6s"
+               swiper-animate-delay="0.8s">北京中关村小巨人创科中心</p>
+            <p id="p3_6" class="ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.6s"
+               swiper-animate-delay="1.1s">王楼<br/>1231232312@qq.com<br/>1802136745<br/>北京银行中关村分行5层培训教室<br/>
+                （海淀区彩和坊路朔黄发展<br/>大厦5层） </p>
+
+            <img id="i6_6" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0.4s" src="/img/imgs_01/71501247-35fa-46ca-8339-010c2a57baca-7331.png"/>
+        </div>
+        <!----------------------------第七页------------------------------------------->
+        <div class="swiper-slide">
+            <img id="bg_up_7" class="ani" swiper-animate-effect="z_zuoyouhua" swiper-animate-duration="5s"
+                 swiper-animate-delay="0s" src="/img/imgs_01/13826ac4-362b-4e70-915a-2f5be75fdbb0-3734.png"/>
+            <p id="p1_7" class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1s"
+               swiper-animate-delay="0.3s">第五期"导师大讲堂<br/>参会回执</p>
+            <input type="text" id="ip1_7" placeholder="姓名" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s"
+                   swiper-animate-delay="0.6s" />
+            <input type="text" id="ip2_7" placeholder="手机" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s"
+                   swiper-animate-delay="0.9s" />
+            <input type="text" id="ip3_7" placeholder="邮箱" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s"
+                   swiper-animate-delay="1.2s" />
+            <input type="text" id="ip4_7" placeholder="企业名称" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s"
+                   swiper-animate-delay="1.5s" />
+            <input type="button" id="ip5_7" placeholder="企业名称" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s"
+                   swiper-animate-delay="1.8s" value="提交" />
+            <p id="p3_7" class="ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.6s"
+               swiper-animate-delay="1.1s">机会难得，场地有限，限企业的创始人、董事长或总经理参加，请于11月18日（周三）下午5点前反馈参会回执至联系邮箱 </p>
+
+            <img id="i6_7" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s"
+                 swiper-animate-delay="0.4s" src="/img/imgs_01/71501247-35fa-46ca-8339-010c2a57baca-7331.png"/>
         </div>
     </div>
     <!-- 如果需要分页器 -->
@@ -83,6 +194,8 @@
 <script src="/js/swiper.min.js"></script>
 <script src="/js/swiper.animate1.0.2.min.js"></script>
 <script src="/js/rem.js"></script>
+<script src="/js/jquery-1.8.3.min.js"></script>
+
 <script>
     //-----------------滑动---------------------------------
     var mySwiper = new Swiper('.swiper-container', {
@@ -91,7 +204,7 @@
 
 
         pagination: '.swiper-pagination',// 如果需要分页器
-        paginationType: 'progress',
+        paginationType: 'bullets',
 //-----------------动画---------------------------------
         onInit: function (swiper) { //Swiper2.x的初始化是onFirstInit
             swiperAnimateCache(swiper); //隐藏动画元素
@@ -101,6 +214,30 @@
             swiperAnimate(swiper); //每个slide切换结束时也运行当前slide动画
         }
     });
+//--------------------------二次动画--------------------------------
+   /* var twice_ani1=$("#i5_4");
+    twice_ani1.on("webkitAnimationEnd", function() {
+        twice_ani1.attr({"swiper-animate-duration":"4s","swiper-animate-delay":"0s"});
+        twice_ani1.addClass("z_zuoyouhua");
 
+    });
+
+    var twice_ani2=$("#bg_up_3");
+    twice_ani2.on("webkitAnimationEnd", function() {
+        twice_ani1.attr({"swiper-animate-duration":"0.5s","swiper-animate-delay":"1s"});
+        twice_ani1.removeClass("z_zuoyouhua");
+
+    });*/
+    //--------------------------音频播放--------------------------------
+    $("#music").toggle(
+        function () {
+            $("audio")[0].pause();
+            $("#mb").css({display:"none"});
+            $("#m1").removeClass("z_xuanzhuan");
+        },function () {
+            $("audio")[0].play();
+            $("#mb").css({display:"block"});
+            $("#m1").addClass("z_xuanzhuan");
+        });
 
 </script>
