--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,9 +38,53 @@
   animation-name: z_shangHua_repeat; }
 
 /* ---------------------------------------------------------- */
+@keyframes z_zuoyouhua {
+  0% {
+    transform: translateX(0rem); }
+  30% {
+    transform: translateX(0.27rem); }
+  60% {
+    transform: translateX(0rem); }
+  80% {
+    transform: translateX(0.27rem); }
+  100% {
+    transform: translateX(0rem); } }
+.z_zuoyouhua {
+  animation: z_zuoyouhua linear infinite; }
+
+/* ---------------------------------------------------------- */
+@keyframes z_xuanzhuan {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
+.z_xuanzhuan {
+  animation: z_xuanzhuan 2s linear infinite; }
+
+/* ---------------------------------------------------------- */
 html, body {
   width: 100%;
   height: 100%; }
+
+#music {
+  position: fixed;
+  top: 0.2rem;
+  right: 0.2rem;
+  z-index: 5;
+  width: 0.5rem;
+  height: 0.5rem; }
+  #music #mb {
+    width: 0.5rem;
+    height: 0.5rem;
+    position: absolute;
+    top: 0;
+    z-index: 1; }
+  #music #m1 {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 0.35rem;
+    height: 0.35rem; }
 
 .swiper-container {
   width: 100%;
@@ -185,5 +229,363 @@ html, body {
     left: 0.75rem;
     font: 0.12rem/0.16rem "";
     width: 1.78rem; }
+  .swiper-slide:nth-child(2) #p3_2 {
+    position: absolute;
+    z-index: 2;
+    top: 3.65rem;
+    left: 1.13rem;
+    font: 0.14rem/0.25rem "";
+    width: 1rem;
+    height: 0.25rem;
+    border: 2px solid #000000;
+    text-align: center; }
+  .swiper-slide:nth-child(2) #p4_2 {
+    position: absolute;
+    z-index: 2;
+    top: 4rem;
+    left: 1.13rem;
+    font: 0.14rem/0.25rem "";
+    width: 1rem;
+    height: 0.25rem;
+    border: 2px solid #000000;
+    text-align: center; }
+
+.swiper-slide:nth-child(3) {
+  position: relative; }
+  .swiper-slide:nth-child(3) #bg_up_3 {
+    width: 3.2rem; }
+  .swiper-slide:nth-child(3) #i2_3 {
+    position: absolute;
+    z-index: 2;
+    top: 0.32rem;
+    left: 0.15rem;
+    width: 0.6rem; }
+  .swiper-slide:nth-child(3) #i3_3 {
+    position: absolute;
+    z-index: 2;
+    top: 0.9rem;
+    left: 0;
+    width: 1.5rem; }
+  .swiper-slide:nth-child(3) #i4_3 {
+    position: absolute;
+    z-index: 2;
+    top: 0.7rem;
+    right: 0;
+    width: 0.98rem;
+    height: 0.11rem; }
+  .swiper-slide:nth-child(3) h3 {
+    position: absolute;
+    z-index: 2;
+    top: 0.7rem;
+    left: 1rem;
+    font: 0.12rem/0.12rem ""; }
+  .swiper-slide:nth-child(3) #p3_3 {
+    position: absolute;
+    z-index: 2;
+    top: 1.24rem;
+    left: 0.66rem;
+    font: 0.14rem/0.38rem "";
+    width: 1.85rem;
+    height: 0.38rem;
+    border: 2px solid #000000;
+    text-align: center; }
+  .swiper-slide:nth-child(3) #p4_3 {
+    position: absolute;
+    z-index: 2;
+    top: 1.92rem;
+    left: 0.66rem;
+    font: 0.14rem/0.38rem "";
+    width: 1.85rem;
+    height: 0.38rem;
+    border: 2px solid #000000;
+    text-align: center; }
+  .swiper-slide:nth-child(3) #p5_3 {
+    position: absolute;
+    z-index: 2;
+    top: 2.57rem;
+    left: 0.66rem;
+    font: 0.14rem/0.38rem "";
+    width: 1.85rem;
+    height: 0.38rem;
+    border: 2px solid #000000;
+    text-align: center; }
+  .swiper-slide:nth-child(3) #p6_3 {
+    position: absolute;
+    z-index: 2;
+    top: 3.22rem;
+    left: 0.66rem;
+    font: 0.14rem/0.38rem "";
+    width: 1.85rem;
+    height: 0.38rem;
+    border: 2px solid #000000;
+    text-align: center; }
+  .swiper-slide:nth-child(3) #i6_3 {
+    animation: z_shangHua_repeat linear infinite;
+    position: absolute;
+    z-index: 2;
+    top: 4.12rem;
+    left: 0rem;
+    width: 100%; }
+
+.swiper-slide:nth-child(4) {
+  position: relative; }
+  .swiper-slide:nth-child(4) #bg_up_4 {
+    width: 0.8rem; }
+  .swiper-slide:nth-child(4) #i2_4 {
+    position: absolute;
+    z-index: 2;
+    top: 0.32rem;
+    left: 0.15rem;
+    width: 0.6rem; }
+  .swiper-slide:nth-child(4) #i3_4 {
+    position: absolute;
+    z-index: 2;
+    top: 0.9rem;
+    left: 0;
+    width: 1.5rem; }
+  .swiper-slide:nth-child(4) #i4_4 {
+    position: absolute;
+    z-index: 2;
+    top: 0.7rem;
+    right: 0;
+    width: 0.98rem;
+    height: 0.11rem; }
+  .swiper-slide:nth-child(4) h3 {
+    position: absolute;
+    z-index: 2;
+    top: 0.7rem;
+    left: 1rem;
+    font: 0.12rem/0.12rem ""; }
+  .swiper-slide:nth-child(4) #box1_4 {
+    position: absolute;
+    z-index: 2;
+    top: 1.35rem;
+    left: 0;
+    width: 2.33rem; }
+  .swiper-slide:nth-child(4) #i5_4 {
+    width: 2.33rem; }
+  .swiper-slide:nth-child(4) #p1_4 {
+    position: absolute;
+    z-index: 2;
+    top: 3rem;
+    left: 0.35rem;
+    width: 2.54rem;
+    text-indent: 0.3rem;
+    font: 0.15rem/0.18rem ""; }
+  .swiper-slide:nth-child(4) #i6_4 {
+    position: absolute;
+    z-index: 2;
+    top: 1.12rem;
+    left: 0.8rem;
+    width: 2rem; }
+
+.swiper-slide:nth-child(5) {
+  position: relative; }
+  .swiper-slide:nth-child(5) #bg_up_5 {
+    width: 0.8rem; }
+  .swiper-slide:nth-child(5) #i2_5 {
+    position: absolute;
+    z-index: 2;
+    top: 0.32rem;
+    left: 0.15rem;
+    width: 0.6rem; }
+  .swiper-slide:nth-child(5) #i3_5 {
+    position: absolute;
+    z-index: 2;
+    top: 0.9rem;
+    left: 0;
+    width: 1.5rem; }
+  .swiper-slide:nth-child(5) #i4_5 {
+    position: absolute;
+    z-index: 2;
+    top: 0.7rem;
+    right: 0;
+    width: 0.98rem;
+    height: 0.11rem; }
+  .swiper-slide:nth-child(5) h3 {
+    position: absolute;
+    z-index: 2;
+    top: 0.7rem;
+    left: 1.5rem;
+    font: 0.12rem/0.12rem ""; }
+  .swiper-slide:nth-child(5) #i5_5 {
+    position: absolute;
+    z-index: 2;
+    top: 1.12rem;
+    right: 0.45rem;
+    width: 2.3rem; }
+  .swiper-slide:nth-child(5) #img_5 {
+    position: absolute;
+    z-index: 3;
+    top: 1.12rem;
+    left: 0.45rem;
+    width: 2.3rem; }
+  .swiper-slide:nth-child(5) #p1_5 {
+    position: absolute;
+    z-index: 4;
+    top: 1.28rem;
+    left: 0.56rem;
+    width: 2rem;
+    text-indent: 0.3rem;
+    font: 0.12rem/0.15rem ""; }
+  .swiper-slide:nth-child(5) #i6_5 {
+    position: absolute;
+    z-index: 2;
+    top: 1.12rem;
+    left: 0.8rem;
+    width: 2rem; }
+
+.swiper-slide:nth-child(6) {
+  position: relative; }
+  .swiper-slide:nth-child(6) #bg_up_6 {
+    position: absolute;
+    z-index: 2;
+    width: 2.68rem;
+    left: -0.6rem; }
+  .swiper-slide:nth-child(6) #p1_6 {
+    position: absolute;
+    z-index: 2;
+    top: 0.72rem;
+    left: 1rem;
+    width: 1.46rem;
+    font: 0.22rem/0.25rem "";
+    text-align: center; }
+  .swiper-slide:nth-child(6) #i1_6 {
+    position: absolute;
+    z-index: 2;
+    top: 1.83rem;
+    left: 0.85rem;
+    width: 1.5rem; }
+  .swiper-slide:nth-child(6) #p2_6 {
+    position: absolute;
+    z-index: 2;
+    top: 2.3rem;
+    left: 0.85rem;
+    font: 0.12rem/0.15rem ""; }
+  .swiper-slide:nth-child(6) #p3_6 {
+    position: absolute;
+    z-index: 2;
+    top: 2.76rem;
+    left: 0.6rem;
+    width: 2.07rem;
+    height: 1.47rem;
+    border: 1px solid #000000;
+    text-align: center;
+    font: 0.12rem/0.17rem ""; }
+  .swiper-slide:nth-child(6) #i6_6 {
+    position: absolute;
+    z-index: 2;
+    top: 1.12rem;
+    left: 0.8rem;
+    width: 2rem; }
+
+.swiper-slide:nth-child(7) {
+  position: relative; }
+  .swiper-slide:nth-child(7) #bg_up_7 {
+    position: absolute;
+    z-index: 2;
+    width: 2.68rem;
+    left: -0.6rem; }
+  .swiper-slide:nth-child(7) #p1_7 {
+    position: absolute;
+    z-index: 2;
+    top: 0.72rem;
+    left: 1rem;
+    width: 1.46rem;
+    font: 0.16rem/0.20rem "";
+    text-align: center; }
+  .swiper-slide:nth-child(7) #i1_7 {
+    position: absolute;
+    z-index: 2;
+    top: 1.83rem;
+    left: 0.85rem;
+    width: 1.5rem; }
+  .swiper-slide:nth-child(7) #p3_7 {
+    position: absolute;
+    z-index: 2;
+    top: 4.05rem;
+    left: 0.6rem;
+    width: 2.07rem;
+    height: 1.47rem;
+    font: 0.12rem/0.15rem ""; }
+  .swiper-slide:nth-child(7) #ip1_7 {
+    background-color: #fff;
+    color: #999;
+    border-radius: 4px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #e1e1e1;
+    font-size: 0.12rem;
+    position: absolute;
+    z-index: 2;
+    top: 1.6rem;
+    text-indent: 0.15rem;
+    left: 0.6rem;
+    width: 2rem;
+    height: 0.3rem; }
+  .swiper-slide:nth-child(7) #ip2_7 {
+    background-color: #fff;
+    color: #999;
+    border-radius: 4px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #e1e1e1;
+    font-size: 0.12rem;
+    position: absolute;
+    z-index: 2;
+    top: 2rem;
+    text-indent: 0.15rem;
+    left: 0.6rem;
+    width: 2rem;
+    height: 0.3rem; }
+  .swiper-slide:nth-child(7) #ip3_7 {
+    background-color: #fff;
+    color: #999;
+    border-radius: 4px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #e1e1e1;
+    font-size: 0.12rem;
+    position: absolute;
+    z-index: 2;
+    top: 2.4rem;
+    text-indent: 0.15rem;
+    left: 0.6rem;
+    width: 2rem;
+    height: 0.3rem; }
+  .swiper-slide:nth-child(7) #ip4_7 {
+    background-color: #fff;
+    color: #999;
+    border-radius: 4px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #e1e1e1;
+    font-size: 0.12rem;
+    position: absolute;
+    z-index: 2;
+    top: 2.8rem;
+    text-indent: 0.15rem;
+    left: 0.6rem;
+    width: 2rem;
+    height: 0.3rem; }
+  .swiper-slide:nth-child(7) #ip5_7 {
+    background-color: #eb8233;
+    color: #fff;
+    border-radius: 4px;
+    border-width: 0px;
+    border-style: solid;
+    border-color: transparent;
+    position: absolute;
+    z-index: 2;
+    top: 3.6rem;
+    left: 1.05rem;
+    width: 1rem;
+    height: 0.3rem; }
+  .swiper-slide:nth-child(7) #i6_7 {
+    position: absolute;
+    z-index: 2;
+    top: 1.12rem;
+    left: 0.8rem;
+    width: 2rem; }
 
 /*# sourceMappingURL=style.css.map */
